--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -174,14 +174,14 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      - "3000:3000"  # Externe poort naar de interne poort van Grafana
+      - "3000:3000"
     depends_on:
-      - sqlserver  # Zorg ervoor dat de SQL Server start voordat Grafana start
+      - sqlserver
     environment:
-      - GF_SECURITY_ADMIN_USER=admin  # Stel je Grafana admin-gebruiker in
-      - GF_SECURITY_ADMIN_PASSWORD=admin  # Stel je Grafana admin-wachtwoord in
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
-      - grafana-storage:/var/lib/grafana  # Slaat instellingen op als een volume
+      - grafana-storage:/var/lib/grafana
 
 volumes:
   sqlserverdata:
